fix spacing & drop down overflow

--- a/src/components/ui/drop-down/styles.module.scss
+++ b/src/components/ui/drop-down/styles.module.scss
@@ -28,6 +28,7 @@
   }
 }
 .itemTemplate {
+  overflow: hidden;
   .label {
     font-size: 14px;
   }
@@ -55,6 +56,7 @@
   display: flex;
   overflow: auto;
   flex-direction: column;
+  max-width: 100%;
   max-height: 300px;
 
   padding-top: 5px;
